# terraform-code-examples

./: .gitignore  README.md
ECR/: aws.tf  backends.tf  data.tf  main.tf  outputs.tf  terraform.tfvars  variables.tf
S3/: backends.tf  main.tf  terraform.tf  terraform.tfvars  variables.tf
image_for_ecr/: README.md  dockerfile  pyproject.toml
