[tool.poetry]
name = "crst-batch-job"
version = "0.0.1"
description = ""
authors = ["grape"]

[tool.poetry.dependencies]
python = "3.8.2"
pandas = "1.4.2"
boto3 = "1.24.12"
snowflake-connector-python = {version = "2.7.8", extras = ["pandas"]}
smartsheet-python-sdk = "2.105.1"
pyyaml = "5.3.1"

[tool.poetry.dev-dependencies]
boto3-stubs = {version = "==1.12.46.0", extras = ["essential"]}
flake8 = "==3.8.4"
pre-commit = "==2.10.1"
